# tamp-exercises

./: CMakeLists.txt
c1/dining/: CMakeLists.txt  dining.cpp
lib/: CMakeLists.txt  bakery_lock.cpp  bakery_lock.hpp  peterson_lock.cpp  peterson_lock.hpp
tests/: CMakeLists.txt  test_bakery_lock.cpp  test_peterson_lock.cpp
